10 improvements from streaming-aggregation bench analysis
- A/B validation: prescribe runs 5 when delta < 5%
- Breadth-first layer sweep: force 5 layers before exp 20
- Standardized ideas.md template with Kept/Failed sections
- Auto-extract secondary metrics in log-experiment.sh
- Enriched status.sh: keep rate trends, streak, improvement curve
- Convergence detection: 15+ consecutive non-keeps warning
- Reinforce scripts-in-scope with concrete modification guidance
- git add -u replacing git add -A for safer commits
- Experiment number field in JSONL entries
- Enriched resume protocol: status first, keep rate, layer gaps